--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </li>
                     <li class="menu__list">
                         <button class="btn">
-                        <a href="#" class="menu__link no__cursor" onclick="closeMenu()">Sign Up</a>
+                        <a href="#" class="menu__link no__cursor btn_single--color" onclick="closeMenu()">Sign Up</a>
                         </button>
                     </li>
                 </ul>
