--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                         <p class="testimonials__p">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore in alias iusto aut deserunt voluptatum error nesciunt ratione, enim doloribus magni aperiam qui ipsam nisi itaque unde id ad dolorem repellat. Praesentium hic autem illo voluptatem tempore mollitia asperiores quae!</p>
                         <div class="testimonials__bottom">
                             <div class="testimonials__charlotte">
-                                <figure><img src="./assets/girlsmile.avif" class="testimonials__img--second" alt=""></figure>
+                                <figure class="second__img--container"><img src="./assets/girlsmile.avif" class="testimonials__img--second" alt=""></figure>
                                 <div class="testimonials__text">
                                     <h3 class="testimonials__h3">Charlotte Hale</h3>
                                     <p class="testimonials__p"> Director, Delos Inc.</p>
@@ -333,6 +333,44 @@
             </div>
         </div>
     </section>
+    <section id="question">
+        <div class="container">
+            <div class="row">
+                <div class="question__wrapper">
+                        <h4>FAQS</h4>
+                        <h1>You have <span class="purple">Questions</span></h1>
+                        <p class="question__p">And we have got answers to all of them. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <div class="question__subheader">
+                            <h3 class="question__h3">Are all the templates easily customizable ?</h3>
+                            <i class="fas fa-angle-down subheader__ifont"></i>
+                        </div>
+                        <div class="question__subheader">
+                            <h3 class="question__h3">How long do you usually support a standalone template for ?</h3>
+                            <i class="fas fa-angle-down subheader__ifont"></i>
+                        </div>
+                        <div class="question__subheader">
+                            <h3 class="question__h3">What kind of payment methods do you accept ?</h3>
+                            <i class="fas fa-angle-down subheader__ifont"></i>
+                        </div>
+                        <div class="question__subheader">
+                            <h3 class="question__h3">Is there a subscription service to get the latest templates ?</h3>
+                            <i class="fas fa-angle-down subheader__ifont"></i>
+                        </div>
+                        <div class="question__subheader">
+                            <h3 class="question__h3">Are the templates ompatible with the React ?</h3>
+                            <i class="fas fa-angle-down subheader__ifont"></i>
+                        </div>
+                        <div class="question__subheader">
+                            <h3 class="question__h3">Do you really support internet Explorer 11 ?</h3>
+                            <i class="fas fa-angle-down subheader__ifont"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <section>
         <div class="container">
             <div class="row">
